# random_code

./: .gitignore  MODULE.bazel  README.md
coroutine/: BUILD  coroutine.c  coroutine.h  main.c
design_pattern/: a.out  observer.cpp
idea_demo/: BUILD  private_destruct.cpp
leveldb/: BUILD  block.h  dbformat.h  format.h  skiplist.h  slice.h  status.h  table_cache.h  version_edit.cpp  version_edit.h  version_set.h
skiplist/: skiplist.h
template/: a.out  function_template.cpp
test/: BUILD  hello_test.cpp
tools/: BUILD  yaml_loader.cpp
utils/: BUILD  coding.cpp  coding.h
